--- a/index.html
+++ b/index.html
@@ -8,20 +8,31 @@
 </head>
 <body>
 <h1>Print ZPL</h1>
-<form id="input-text">
+<div style="flex-direction: column">
     <div>
-        <label for="text-to-print">Text to ZPL:</label>
-        <textarea id="text-to-print" name="text" placeholder="Enter Text..."></textarea>
+        <label for="file-upload">PNG to ZPL</label>
+        <input type="file" id="file-upload" accept="image/png"/>
     </div>
-    <div style="justify-content: flex-end">
-        <button type="submit">Convert to ZPL</button>
-        <button type="reset">Reset</button>
+    <div>
+        <label for="text-to-zpl">Text to ZPL</label>
+        <textarea id="text-to-zpl" name="text" placeholder="Enter Text...">#JSCC25</textarea>
     </div>
     <div>
         <label for="zpl-to-print">ZPL to Print</label>
-        <textarea id="zpl-to-print" name="label" rows="6"></textarea>
+        <textarea id="zpl-to-print" rows="6"></textarea>
     </div>
-</form>
+    <div style="display: flex;">
+        <span style="display: flex; gap:1rem;">
+            <button id="convert-to-zpl">Convert&nbsp;to&nbsp;ZPL</button>
+            <button id="send-to-printer" disabled>Send&nbsp;to&nbsp;Printer</button>
+            <button id="send-to-terminal" disabled>Send&nbsp;to&nbsp;Terminal</button>
+        </span>
+        <span style="display: flex;flex-direction: column; gap:1rem;">
+            <button id="reset">Reset</button>
+            <button id="verify-connection">Verify&nbsp;Connection</button>
+        </span>
+    </div>
+</div>
 <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
