Prints Label via Server when connected by USB

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div>
         <label for="text-to-zpl">Text to ZPL</label>
-        <textarea id="text-to-zpl" name="text" placeholder="Enter Text...">#JSCC25</textarea>
+        <textarea id="text-to-zpl" name="text" placeholder="Enter Text...">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</textarea>
     </div>
     <div>
         <label for="zpl-to-print">ZPL to Print</label>
