WIP:Making it windows compatible

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
         <input type="file" id="file-upload" accept="image/png"/>
     </div>
     <div>
+        <label for="printer-name">Select Printer</label>
+        <select id="printer-name" name="printer-name">
+            <option value="Intermec_PC43t_300_FP">Intermec_PC43t_300_FP</option>
+            <option value="Intermec PC43t (300 dpi)">Intermec PC43t (300 dpi)</option>
+        </select>
+    </div>
+    <div>
         <label for="text-to-zpl">Text to ZPL</label>
         <textarea id="text-to-zpl" name="text" placeholder="Enter Text...">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</textarea>
     </div>
