--- a/index.html
+++ b/index.html
@@ -21,16 +21,15 @@
         <label for="zpl-to-print">ZPL to Print</label>
         <textarea id="zpl-to-print" rows="6"></textarea>
     </div>
+    <div style="display: flex; justify-content: flex-end">
+        <button id="convert-to-zpl">Convert&nbsp;to&nbsp;ZPL</button>
+        <button id="send-to-printer" disabled>Send&nbsp;to&nbsp;Printer</button>
+        <button id="reset">Reset</button>
+    </div>
     <div style="display: flex;">
-        <span style="display: flex; gap:1rem;">
-            <button id="convert-to-zpl">Convert&nbsp;to&nbsp;ZPL</button>
-            <button id="send-to-printer" disabled>Send&nbsp;to&nbsp;Printer</button>
-            <button id="send-to-terminal" disabled>Send&nbsp;to&nbsp;Terminal</button>
-        </span>
-        <span style="display: flex;flex-direction: column; gap:1rem;">
-            <button id="reset">Reset</button>
-            <button id="verify-connection">Verify&nbsp;Connection</button>
-        </span>
+        <button id="verify-connection">Verify&nbsp;Connection</button>
+        <button id="send-to-terminal" disabled>Send&nbsp;to&nbsp;Terminal</button>
+        <button id="participant-labels">Participant&nbsp;Labels</button>
     </div>
 </div>
 <script type="module" src="/src/main.ts"></script>
