--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <label for="printer-name">Select Printer</label>
             <select
                     id="printer-name"
-                    name="printer-name"
+                    name="printerName"
                     aria-readonly="true"
             >
                 <option value="Intermec_PC43t_300_FP">
@@ -55,21 +55,19 @@
             <label for="participant-name">Name</label>
             <input
                     id="participant-name"
-                    name="participant-name"
+                    name="participantName"
                     type="text"
                     placeholder="Full or Partial Name"
                     autofocus
-                    value="Philip Saa"
             />
         </div>
         <div>
             <label for="company-name">Company Name</label>
             <input
                     id="company-name"
-                    name="company-name"
+                    name="companyName"
                     type="text"
                     placeholder="Optional"
-                    value="Cowglow Co."
             />
         </div>
         <div>
@@ -79,7 +77,7 @@
                 JavaScript,
                 Web Design, AI)
             </small>
-            <textarea id="tag-list" name="tag-list" aria-describedby="tag-list-help" placeholder="HTML, CSS, JS">TypeScript, Indie Web, TDD</textarea>
+            <textarea id="tag-list" name="tagList" aria-describedby="tag-list-help" placeholder="HTML, CSS, JS"></textarea>
         </div>
         <div>
             <button id="-print-it" type="submit">Print</button>
