--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <label for="printer-name">Select Printer</label>
             <select
                     id="printer-name"
-                    name="printerName"
                     aria-readonly="true"
+                    name="printerName"
             >
                 <option value="Intermec_PC43t_300_FP">
                     Intermec_PC43t_300_FP (macOS)
@@ -33,7 +33,7 @@
         <div class="feature-block">
             <div>
                 <label for="text-to-zpl">Text to ZPL</label>
-                <textarea id="text-to-zpl" name="text" placeholder="Enter Text...">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</textarea>
+                <textarea id="text-to-zpl" placeholder="Enter Text...">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</textarea>
             </div>
             <div>
                 <label for="zpl-to-print">ZPL to Print</label>
@@ -77,7 +77,8 @@
                 JavaScript,
                 Web Design, AI)
             </small>
-            <textarea id="tag-list" name="tagList" aria-describedby="tag-list-help" placeholder="HTML, CSS, JS"></textarea>
+            <textarea id="tag-list" name="tagList" aria-describedby="tag-list-help"
+                      placeholder="HTML, CSS, JS"></textarea>
         </div>
         <div>
             <button id="-print-it" type="submit">Print</button>
